Adding a "clear cart" button to the cart

--- a/cart.html
+++ b/cart.html
@@ -198,6 +198,11 @@
                             <li><i class="fal fa-check"></i> Free payment deferral</li>
                         </ul>
                     </div>
+
+                    <div class="col-12 clear-local-storage cart__remove">
+                        <i class="fas fa-trash-alt"></i>
+                        clear cart
+                    </div>
                     
                 </section>
 
